# pixelsort

./: Cargo.toml  LICENSE.md  README.md  pixel_sorter
.github/workflows/: mean_bean_ci.yml  mean_bean_deploy.yml
src/: cli.rs  exclude.rs  main.rs  sort.rs
