[package]
name = "pixelsort"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["cargo", "wrap_help"] }
image = { version = "0.24.8", default-features = false, features = ["png", "jpeg"] }
rand = "0.8.5"
